Compilateur/y.output
Terminaux inutilisés dans la grammaire

   tAND
   tOR
   tXOR
   tCO
   tCF


La règle est inutile dans l'analyseur à cause de conflits

   24 $@4: %empty


État 48 conflits: 1 réduction/réduction
État 74 conflits: 1 réduction/réduction
État 90 conflits: 7 décalage/réduction
État 91 conflits: 7 décalage/réduction
État 92 conflits: 7 décalage/réduction
État 93 conflits: 3 décalage/réduction
État 94 conflits: 3 décalage/réduction
État 95 conflits: 3 décalage/réduction
État 96 conflits: 3 décalage/réduction


Grammaire

    0 $accept: S $end

    1 S: tINT tMAIN tPO ARGS tPF BODY
    2  | tVOID tMAIN tPO ARGS tPF BODY
    3  | tMAIN tPO ARGS tPF BODY

    4 $@1: %empty

    5 BODY: tAO $@1 CONTENT tAF

    6 TYPE: tINT
    7     | tCONST tINT

    8 ARGS: %empty
    9     | TYPE tVAR MULTIPLEAGRS

   10 MULTIPLEAGRS: %empty
   11             | tVIR TYPE tVAR MULTIPLEAGRS

   12 CONTENT: %empty
   13        | LINE tFIN CONTENT
   14        | IF CONTENT
   15        | IFLINE CONTENT
   16        | IFALONE CONTENT
   17        | WHILE CONTENT

   18 LINE: DECLARATION
   19     | AFFECTATION
   20     | tPRINTF tPO tVAR tPF

   21 $@2: %empty

   22 $@3: %empty

   23 IF: tIF tPO EXPRESSION tPF $@2 BODY $@3 tELSE BODY

   24 $@4: %empty

   25 IFALONE: tIF tPO EXPRESSION tPF $@4 BODY

   26 $@5: %empty

   27 $@6: %empty

   28 IFLINE: tIF tPO EXPRESSION tPF $@5 LINE $@6 tFIN

   29 $@7: %empty

   30 WHILE: tWHILE tPO EXPRESSION tPF $@7 BODY

   31 $@8: %empty

   32 $@9: %empty

   33 WHILE: tWHILE tPO EXPRESSION tPF $@8 LINE $@9 tFIN

   34 DECLARATION: tCONST TYPE tVAR MULTIPLE
   35            | TYPE tVAR MULTIPLE

   36 MULTIPLE: %empty
   37         | tVIR tVAR MULTIPLE

   38 AFFECTATION: tVAR tEGA EXPRESSION
   39            | %empty

   40 EXPRESSION: TERM
   41           | EXPRESSION tMUL EXPRESSION
   42           | EXPRESSION tDIV EXPRESSION
   43           | EXPRESSION tADD EXPRESSION
   44           | EXPRESSION tSUB EXPRESSION
   45           | EXPRESSION tEGAEGA EXPRESSION
   46           | EXPRESSION tINF EXPRESSION
   47           | EXPRESSION tSUP EXPRESSION
   48           | tPO EXPRESSION tPF

   49 TERM: tNUM
   50     | tFLOAT
   51     | tEXP
   52     | tVAR


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tINT (258) 1 6 7
tVOID (259) 2
tMAIN (260) 1 2 3
tPO (261) 1 2 3 20 23 25 28 30 33 48
tPF (262) 1 2 3 20 23 25 28 30 33 48
tAO (263) 5
tAF (264) 5
tIF (265) 23 25 28
tELSE (266) 23
tWHILE (267) 30 33
tCONST (268) 7 34
tINF (269) 46
tSUP (270) 47
tAND (271)
tOR (272)
tXOR (273)
tEGAEGA (274) 45
tMUL (275) 41
tDIV (276) 42
tADD (277) 43
tSUB (278) 44
tEGA (279) 38
tCO (280)
tCF (281)
tVIR (282) 11 37
tFIN (283) 13 28 33
tPRINTF (284) 20
tNUM (285) 49
tFLOAT (286) 50
tEXP (287) 51
tVAR (288) 9 11 20 34 35 37 38 52


Non-terminaux, suivis des règles où ils apparaissent

$accept (34)
    à gauche: 0
S (35)
    à gauche: 1 2 3, à droite: 0
BODY (36)
    à gauche: 5, à droite: 1 2 3 23 25 30
$@1 (37)
    à gauche: 4, à droite: 5
TYPE (38)
    à gauche: 6 7, à droite: 9 11 34 35
ARGS (39)
    à gauche: 8 9, à droite: 1 2 3
MULTIPLEAGRS (40)
    à gauche: 10 11, à droite: 9 11
CONTENT (41)
    à gauche: 12 13 14 15 16 17, à droite: 5 13 14 15 16 17
LINE (42)
    à gauche: 18 19 20, à droite: 13 28 33
IF (43)
    à gauche: 23, à droite: 14
$@2 (44)
    à gauche: 21, à droite: 23
$@3 (45)
    à gauche: 22, à droite: 23
IFALONE (46)
    à gauche: 25, à droite: 16
$@4 (47)
    à gauche: 24, à droite: 25
IFLINE (48)
    à gauche: 28, à droite: 15
$@5 (49)
    à gauche: 26, à droite: 28
$@6 (50)
    à gauche: 27, à droite: 28
WHILE (51)
    à gauche: 30 33, à droite: 17
$@7 (52)
    à gauche: 29, à droite: 30
$@8 (53)
    à gauche: 31, à droite: 33
$@9 (54)
    à gauche: 32, à droite: 33
DECLARATION (55)
    à gauche: 34 35, à droite: 18
MULTIPLE (56)
    à gauche: 36 37, à droite: 34 35 37
AFFECTATION (57)
    à gauche: 38 39, à droite: 19
EXPRESSION (58)
    à gauche: 40 41 42 43 44 45 46 47 48, à droite: 23 25 28 30 33
    38 41 42 43 44 45 46 47 48
TERM (59)
    à gauche: 49 50 51 52, à droite: 40


État 0

    0 $accept: . S $end

    tINT   décalage et aller à l'état 1
    tVOID  décalage et aller à l'état 2
    tMAIN  décalage et aller à l'état 3

    S  aller à l'état 4


État 1

    1 S: tINT . tMAIN tPO ARGS tPF BODY

    tMAIN  décalage et aller à l'état 5


État 2

    2 S: tVOID . tMAIN tPO ARGS tPF BODY

    tMAIN  décalage et aller à l'état 6


État 3

    3 S: tMAIN . tPO ARGS tPF BODY

    tPO  décalage et aller à l'état 7


État 4

    0 $accept: S . $end

    $end  décalage et aller à l'état 8


État 5

    1 S: tINT tMAIN . tPO ARGS tPF BODY

    tPO  décalage et aller à l'état 9


État 6

    2 S: tVOID tMAIN . tPO ARGS tPF BODY

    tPO  décalage et aller à l'état 10


État 7

    3 S: tMAIN tPO . ARGS tPF BODY

    tINT    décalage et aller à l'état 11
    tCONST  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 8 (ARGS)

    TYPE  aller à l'état 13
    ARGS  aller à l'état 14


État 8

    0 $accept: S $end .

    $défaut  accepter


État 9

    1 S: tINT tMAIN tPO . ARGS tPF BODY

    tINT    décalage et aller à l'état 11
    tCONST  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 8 (ARGS)

    TYPE  aller à l'état 13
    ARGS  aller à l'état 15


État 10

    2 S: tVOID tMAIN tPO . ARGS tPF BODY

    tINT    décalage et aller à l'état 11
    tCONST  décalage et aller à l'état 12

    $défaut  réduction par utilisation de la règle 8 (ARGS)

    TYPE  aller à l'état 13
    ARGS  aller à l'état 16


État 11

    6 TYPE: tINT .

    $défaut  réduction par utilisation de la règle 6 (TYPE)


État 12

    7 TYPE: tCONST . tINT

    tINT  décalage et aller à l'état 17


État 13

    9 ARGS: TYPE . tVAR MULTIPLEAGRS

    tVAR  décalage et aller à l'état 18


État 14

    3 S: tMAIN tPO ARGS . tPF BODY

    tPF  décalage et aller à l'état 19


État 15

    1 S: tINT tMAIN tPO ARGS . tPF BODY

    tPF  décalage et aller à l'état 20


État 16

    2 S: tVOID tMAIN tPO ARGS . tPF BODY

    tPF  décalage et aller à l'état 21


État 17

    7 TYPE: tCONST tINT .

    $défaut  réduction par utilisation de la règle 7 (TYPE)


État 18

    9 ARGS: TYPE tVAR . MULTIPLEAGRS

    tVIR  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 10 (MULTIPLEAGRS)

    MULTIPLEAGRS  aller à l'état 23


État 19

    3 S: tMAIN tPO ARGS tPF . BODY

    tAO  décalage et aller à l'état 24

    BODY  aller à l'état 25


État 20

    1 S: tINT tMAIN tPO ARGS tPF . BODY

    tAO  décalage et aller à l'état 24

    BODY  aller à l'état 26


État 21

    2 S: tVOID tMAIN tPO ARGS tPF . BODY

    tAO  décalage et aller à l'état 24

    BODY  aller à l'état 27


État 22

   11 MULTIPLEAGRS: tVIR . TYPE tVAR MULTIPLEAGRS

    tINT    décalage et aller à l'état 11
    tCONST  décalage et aller à l'état 12

    TYPE  aller à l'état 28


État 23

    9 ARGS: TYPE tVAR MULTIPLEAGRS .

    $défaut  réduction par utilisation de la règle 9 (ARGS)


État 24

    5 BODY: tAO . $@1 CONTENT tAF

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 29


État 25

    3 S: tMAIN tPO ARGS tPF BODY .

    $défaut  réduction par utilisation de la règle 3 (S)


État 26

    1 S: tINT tMAIN tPO ARGS tPF BODY .

    $défaut  réduction par utilisation de la règle 1 (S)


État 27

    2 S: tVOID tMAIN tPO ARGS tPF BODY .

    $défaut  réduction par utilisation de la règle 2 (S)


État 28

   11 MULTIPLEAGRS: tVIR TYPE . tVAR MULTIPLEAGRS

    tVAR  décalage et aller à l'état 30


État 29

    5 BODY: tAO $@1 . CONTENT tAF

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 37
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 30

   11 MULTIPLEAGRS: tVIR TYPE tVAR . MULTIPLEAGRS

    tVIR  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 10 (MULTIPLEAGRS)

    MULTIPLEAGRS  aller à l'état 45


État 31

   23 IF: tIF . tPO EXPRESSION tPF $@2 BODY $@3 tELSE BODY
   25 IFALONE: tIF . tPO EXPRESSION tPF $@4 BODY
   28 IFLINE: tIF . tPO EXPRESSION tPF $@5 LINE $@6 tFIN

    tPO  décalage et aller à l'état 46


État 32

   30 WHILE: tWHILE . tPO EXPRESSION tPF $@7 BODY
   33      | tWHILE . tPO EXPRESSION tPF $@8 LINE $@9 tFIN

    tPO  décalage et aller à l'état 47


État 33

    7 TYPE: tCONST . tINT
   34 DECLARATION: tCONST . TYPE tVAR MULTIPLE

    tINT    décalage et aller à l'état 48
    tCONST  décalage et aller à l'état 12

    TYPE  aller à l'état 49


État 34

   20 LINE: tPRINTF . tPO tVAR tPF

    tPO  décalage et aller à l'état 50


État 35

   38 AFFECTATION: tVAR . tEGA EXPRESSION

    tEGA  décalage et aller à l'état 51


État 36

   35 DECLARATION: TYPE . tVAR MULTIPLE

    tVAR  décalage et aller à l'état 52


État 37

    5 BODY: tAO $@1 CONTENT . tAF

    tAF  décalage et aller à l'état 53


État 38

   13 CONTENT: LINE . tFIN CONTENT

    tFIN  décalage et aller à l'état 54


État 39

   14 CONTENT: IF . CONTENT

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 55
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 40

   16 CONTENT: IFALONE . CONTENT

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 56
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 41

   15 CONTENT: IFLINE . CONTENT

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 57
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 42

   17 CONTENT: WHILE . CONTENT

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 58
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 43

   18 LINE: DECLARATION .

    $défaut  réduction par utilisation de la règle 18 (LINE)


État 44

   19 LINE: AFFECTATION .

    $défaut  réduction par utilisation de la règle 19 (LINE)


État 45

   11 MULTIPLEAGRS: tVIR TYPE tVAR MULTIPLEAGRS .

    $défaut  réduction par utilisation de la règle 11 (MULTIPLEAGRS)


État 46

   23 IF: tIF tPO . EXPRESSION tPF $@2 BODY $@3 tELSE BODY
   25 IFALONE: tIF tPO . EXPRESSION tPF $@4 BODY
   28 IFLINE: tIF tPO . EXPRESSION tPF $@5 LINE $@6 tFIN

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 64
    TERM        aller à l'état 65


État 47

   30 WHILE: tWHILE tPO . EXPRESSION tPF $@7 BODY
   33      | tWHILE tPO . EXPRESSION tPF $@8 LINE $@9 tFIN

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 66
    TERM        aller à l'état 65


État 48

    6 TYPE: tINT .
    7     | tCONST tINT .

    tVAR      réduction par utilisation de la règle 6 (TYPE)
    tVAR      [réduction par utilisation de la règle 7 (TYPE)]
    $défaut  réduction par utilisation de la règle 6 (TYPE)


État 49

   34 DECLARATION: tCONST TYPE . tVAR MULTIPLE

    tVAR  décalage et aller à l'état 67


État 50

   20 LINE: tPRINTF tPO . tVAR tPF

    tVAR  décalage et aller à l'état 68


État 51

   38 AFFECTATION: tVAR tEGA . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 69
    TERM        aller à l'état 65


État 52

   35 DECLARATION: TYPE tVAR . MULTIPLE

    tVIR  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 36 (MULTIPLE)

    MULTIPLE  aller à l'état 71


État 53

    5 BODY: tAO $@1 CONTENT tAF .

    $défaut  réduction par utilisation de la règle 5 (BODY)


État 54

   13 CONTENT: LINE tFIN . CONTENT

    tINT     décalage et aller à l'état 11
    tIF      décalage et aller à l'état 31
    tWHILE   décalage et aller à l'état 32
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    tFIN      réduction par utilisation de la règle 39 (AFFECTATION)
    $défaut  réduction par utilisation de la règle 12 (CONTENT)

    TYPE         aller à l'état 36
    CONTENT      aller à l'état 72
    LINE         aller à l'état 38
    IF           aller à l'état 39
    IFALONE      aller à l'état 40
    IFLINE       aller à l'état 41
    WHILE        aller à l'état 42
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 55

   14 CONTENT: IF CONTENT .

    $défaut  réduction par utilisation de la règle 14 (CONTENT)


État 56

   16 CONTENT: IFALONE CONTENT .

    $défaut  réduction par utilisation de la règle 16 (CONTENT)


État 57

   15 CONTENT: IFLINE CONTENT .

    $défaut  réduction par utilisation de la règle 15 (CONTENT)


État 58

   17 CONTENT: WHILE CONTENT .

    $défaut  réduction par utilisation de la règle 17 (CONTENT)


État 59

   48 EXPRESSION: tPO . EXPRESSION tPF

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 73
    TERM        aller à l'état 65


État 60

   49 TERM: tNUM .

    $défaut  réduction par utilisation de la règle 49 (TERM)


État 61

   50 TERM: tFLOAT .

    $défaut  réduction par utilisation de la règle 50 (TERM)


État 62

   51 TERM: tEXP .

    $défaut  réduction par utilisation de la règle 51 (TERM)


État 63

   52 TERM: tVAR .

    $défaut  réduction par utilisation de la règle 52 (TERM)


État 64

   23 IF: tIF tPO EXPRESSION . tPF $@2 BODY $@3 tELSE BODY
   25 IFALONE: tIF tPO EXPRESSION . tPF $@4 BODY
   28 IFLINE: tIF tPO EXPRESSION . tPF $@5 LINE $@6 tFIN
   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION

    tPF      décalage et aller à l'état 74
    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81


État 65

   40 EXPRESSION: TERM .

    $défaut  réduction par utilisation de la règle 40 (EXPRESSION)


État 66

   30 WHILE: tWHILE tPO EXPRESSION . tPF $@7 BODY
   33      | tWHILE tPO EXPRESSION . tPF $@8 LINE $@9 tFIN
   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION

    tPF      décalage et aller à l'état 82
    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81


État 67

   34 DECLARATION: tCONST TYPE tVAR . MULTIPLE

    tVIR  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 36 (MULTIPLE)

    MULTIPLE  aller à l'état 83


État 68

   20 LINE: tPRINTF tPO tVAR . tPF

    tPF  décalage et aller à l'état 84


État 69

   38 AFFECTATION: tVAR tEGA EXPRESSION .
   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION

    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 38 (AFFECTATION)


État 70

   37 MULTIPLE: tVIR . tVAR MULTIPLE

    tVAR  décalage et aller à l'état 85


État 71

   35 DECLARATION: TYPE tVAR MULTIPLE .

    $défaut  réduction par utilisation de la règle 35 (DECLARATION)


État 72

   13 CONTENT: LINE tFIN CONTENT .

    $défaut  réduction par utilisation de la règle 13 (CONTENT)


État 73

   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION
   48           | tPO EXPRESSION . tPF

    tPF      décalage et aller à l'état 86
    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81


État 74

   23 IF: tIF tPO EXPRESSION tPF . $@2 BODY $@3 tELSE BODY
   25 IFALONE: tIF tPO EXPRESSION tPF . $@4 BODY
   28 IFLINE: tIF tPO EXPRESSION tPF . $@5 LINE $@6 tFIN

    tAO       réduction par utilisation de la règle 21 ($@2)
    tAO       [réduction par utilisation de la règle 24 ($@4)]
    $défaut  réduction par utilisation de la règle 26 ($@5)

    $@2  aller à l'état 87
    $@4  aller à l'état 88
    $@5  aller à l'état 89


État 75

   46 EXPRESSION: EXPRESSION tINF . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 90
    TERM        aller à l'état 65


État 76

   47 EXPRESSION: EXPRESSION tSUP . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 91
    TERM        aller à l'état 65


État 77

   45 EXPRESSION: EXPRESSION tEGAEGA . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 92
    TERM        aller à l'état 65


État 78

   41 EXPRESSION: EXPRESSION tMUL . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 93
    TERM        aller à l'état 65


État 79

   42 EXPRESSION: EXPRESSION tDIV . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 94
    TERM        aller à l'état 65


État 80

   43 EXPRESSION: EXPRESSION tADD . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 95
    TERM        aller à l'état 65


État 81

   44 EXPRESSION: EXPRESSION tSUB . EXPRESSION

    tPO     décalage et aller à l'état 59
    tNUM    décalage et aller à l'état 60
    tFLOAT  décalage et aller à l'état 61
    tEXP    décalage et aller à l'état 62
    tVAR    décalage et aller à l'état 63

    EXPRESSION  aller à l'état 96
    TERM        aller à l'état 65


État 82

   30 WHILE: tWHILE tPO EXPRESSION tPF . $@7 BODY
   33      | tWHILE tPO EXPRESSION tPF . $@8 LINE $@9 tFIN

    tAO       réduction par utilisation de la règle 29 ($@7)
    $défaut  réduction par utilisation de la règle 31 ($@8)

    $@7  aller à l'état 97
    $@8  aller à l'état 98


État 83

   34 DECLARATION: tCONST TYPE tVAR MULTIPLE .

    $défaut  réduction par utilisation de la règle 34 (DECLARATION)


État 84

   20 LINE: tPRINTF tPO tVAR tPF .

    $défaut  réduction par utilisation de la règle 20 (LINE)


État 85

   37 MULTIPLE: tVIR tVAR . MULTIPLE

    tVIR  décalage et aller à l'état 70

    $défaut  réduction par utilisation de la règle 36 (MULTIPLE)

    MULTIPLE  aller à l'état 99


État 86

   48 EXPRESSION: tPO EXPRESSION tPF .

    $défaut  réduction par utilisation de la règle 48 (EXPRESSION)


État 87

   23 IF: tIF tPO EXPRESSION tPF $@2 . BODY $@3 tELSE BODY

    tAO  décalage et aller à l'état 24

    BODY  aller à l'état 100


État 88

   25 IFALONE: tIF tPO EXPRESSION tPF $@4 . BODY

    tAO  décalage et aller à l'état 24

    BODY  aller à l'état 101


État 89

   28 IFLINE: tIF tPO EXPRESSION tPF $@5 . LINE $@6 tFIN

    tINT     décalage et aller à l'état 11
    tCONST   décalage et aller à l'état 33
    tPRINTF  décalage et aller à l'état 34
    tVAR     décalage et aller à l'état 35

    $défaut  réduction par utilisation de la règle 39 (AFFECTATION)

    TYPE         aller à l'état 36
    LINE         aller à l'état 102
    DECLARATION  aller à l'état 43
    AFFECTATION  aller à l'état 44


État 90

   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   46           | EXPRESSION tINF EXPRESSION .
   47           | EXPRESSION . tSUP EXPRESSION

    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81

    tINF      [réduction par utilisation de la règle 46 (EXPRESSION)]
    tSUP      [réduction par utilisation de la règle 46 (EXPRESSION)]
    tEGAEGA   [réduction par utilisation de la règle 46 (EXPRESSION)]
    tMUL      [réduction par utilisation de la règle 46 (EXPRESSION)]
    tDIV      [réduction par utilisation de la règle 46 (EXPRESSION)]
    tADD      [réduction par utilisation de la règle 46 (EXPRESSION)]
    tSUB      [réduction par utilisation de la règle 46 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 46 (EXPRESSION)


État 91

   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION
   47           | EXPRESSION tSUP EXPRESSION .

    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81

    tINF      [réduction par utilisation de la règle 47 (EXPRESSION)]
    tSUP      [réduction par utilisation de la règle 47 (EXPRESSION)]
    tEGAEGA   [réduction par utilisation de la règle 47 (EXPRESSION)]
    tMUL      [réduction par utilisation de la règle 47 (EXPRESSION)]
    tDIV      [réduction par utilisation de la règle 47 (EXPRESSION)]
    tADD      [réduction par utilisation de la règle 47 (EXPRESSION)]
    tSUB      [réduction par utilisation de la règle 47 (EXPRESSION)]
    $défaut  réduction par utilisation de la règle 47 (EXPRESSION)


État 92

   41 EXPRESSION: EXPRESSION . tMUL EXPRESSION
   42           | EXPRESSION . tDIV EXPRESSION
   43           | EXPRESSION . tADD EXPRESSION
   44           | EXPRESSION . tSUB EXPRESSION
   45           | EXPRESSION . tEGAEGA EXPRESSION
   45           | EXPRESSION tEGAEGA EXPRESSION .
   46           | EXPRESSION . tINF EXPRESSION
   47           | EXPRESSION . tSUP EXPRESSION

    tINF     décalage et aller à l'état 75
    tSUP     décalage et aller à l'état 76
    tEGAEGA  décalage et aller à l'état 77
    tMUL     décalage et aller à l'état 78
    tDIV     décalage et aller à l'état 79
    tADD     décalage et aller à l'état 80
    tSUB     décalage et aller à l'état 81
